--- a/src/assets/scss/_main-sidebar.scss
+++ b/src/assets/scss/_main-sidebar.scss
@@ -136,12 +136,24 @@
   .menu-open {
     >.nav-treeview {
       display: block;
+      -webkit-animation-name: trans;
+      -webkit-animation-duration: 0.75s;
+      animation-name: trans;
+      animation-duration: 0.75s;
     }
   }
 
   .nav-treeview {
     display: none;
     list-style: none;
-    padding: 0;
   }
+}
+
+@-webkit-keyframes trans{
+  from{opacity: .0}
+  to{opacity: 1}
+}
+@keyframes trans{
+  from{opacity: .0}
+  to{opacity: 1}
 }
