confirm account, change password and logout

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -12,3 +12,7 @@
 @import "miscellaneous";
 @import "login_page";
 @import "small_box";
+@import "main-header";
+@import "media";
+@import "dropdown";
+@import "text";
