--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,4 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
+@import "variable";
 @import "reboot";
 @import "breadcrumb";
 @import "float";
@@ -17,3 +18,4 @@
 @import "dropdown";
 @import "text";
 @import "profile";
+@import "chat"
