finish UI chatbox

--- a/src/assets/scss/_chat.scss
+++ b/src/assets/scss/_chat.scss
@@ -10,10 +10,10 @@
         .list-chat {
             .list-chat-item {
                 .image .img-circle{
-                    width: 50px;
-                    height: 50px;
+                    width: 3.125rem;
+                    height: 3.125rem;
                 }
-                border-radius: 5px;
+                border-radius: 0.5rem;
 
                 .badge {
                     border-radius: 50%;
@@ -22,6 +22,71 @@
 
             .list-chat-item:hover {
                 background-color: #f1f1f1;
+            }
+        }
+    }
+
+    .chat-sidebar-right {
+        border-left: 1px solid $borderCommon;
+        height: $heightContentWrapper;
+
+        .image {
+            img {
+                width: 6.25rem;
+                height: 6.25rem;
+            }
+        }
+        .btn-circle {
+            height: 30px;
+            width: 30px;
+            display: block;
+            border-radius: 50%;
+            background-color: #f1f1f1;
+            color: #333;
+        }
+
+        .btn-circle:hover {
+            color: var(--bs-link-color);
+        }
+    }
+
+    .chat-content {
+        height: $heightContentWrapper;
+
+        .messages {
+            height: calc($heightContentWrapper - 3.6rem);
+            overflow: auto;
+
+            .message {
+                border-radius: 0.5rem;
+            }
+            .current-user {
+                .message {
+                    background-color: rgb(0, 132, 255);
+                    color: #ffffff;
+                }
+            }
+            .other-user {
+                .message {
+                    background-color: #E4E6EB;
+                }
+            }
+        }
+        form {
+            height: 3.6rem;
+            .form-action {
+                height: 100%;
+                svg {
+                    path {
+                        fill: #c1c4c9 !important;
+                    }
+                }
+
+                svg:hover {
+                    path {
+                        fill: rgb(0, 132, 255) !important;
+                    }
+                }
             }
         }
     }
