--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,6 +1,7 @@
 @import "~bootstrap/scss/bootstrap";
 @import "variable";
 @import "reboot";
+@import "common";
 @import "breadcrumb";
 @import "float";
 @import "brand";
@@ -18,4 +19,4 @@
 @import "dropdown";
 @import "text";
 @import "profile";
-@import "chat"
+@import "chat";
