--- a/src/assets/scss/_chat.scss
+++ b/src/assets/scss/_chat.scss
@@ -1,93 +1,118 @@
 .chat {
-    background-color: #fff;
-    position: relative;
-    border-top: 1px solid $borderCommon;
+  background-color: #fff;
+  position: relative;
+  border-top: 1px solid $borderCommon;
 
-    .chat-sidebar-left {
-        border-right: 1px solid $borderCommon;
-        height: $heightContentWrapper;
+  .chat-sidebar-left {
+    border-right: 1px solid $borderCommon;
+    height: $heightContentWrapper;
 
-        .list-chat {
-            .list-chat-item {
-                .image .img-circle{
-                    width: 3.125rem;
-                    height: 3.125rem;
-                }
-                border-radius: 0.5rem;
+    .search-box {
+      position: relative;
 
-                .badge {
-                    border-radius: 50%;
-                }
-            }
+      &__list-user {
+        position: absolute;
+        width: 100%;
 
-            .list-chat-item:hover {
-                background-color: #f1f1f1;
-            }
+        .list-group-item:hover {
+          background-color: #f1f1f1;
         }
+
+        .image .img-circle {
+          width: 2rem;
+          height: 2rem;
+        }
+      }
     }
 
-    .chat-sidebar-right {
-        border-left: 1px solid $borderCommon;
-        height: $heightContentWrapper;
-
-        .image {
-            img {
-                width: 6.25rem;
-                height: 6.25rem;
-            }
-        }
-        .btn-circle {
-            height: 30px;
-            width: 30px;
-            display: block;
-            border-radius: 50%;
-            background-color: #f1f1f1;
-            color: #333;
+    .list-chat {
+      .list-chat-item {
+        .image .img-circle {
+          width: 3.125rem;
+          height: 3.125rem;
         }
 
-        .btn-circle:hover {
-            color: var(--bs-link-color);
+        border-radius: 0.5rem;
+
+        .badge {
+          border-radius: 50%;
         }
+      }
+
+      .list-chat-item:hover {
+        background-color: #f1f1f1;
+      }
+    }
+  }
+
+  .chat-sidebar-right {
+    border-left: 1px solid $borderCommon;
+    height: $heightContentWrapper;
+
+    .image {
+      img {
+        width: 6.25rem;
+        height: 6.25rem;
+      }
     }
 
-    .chat-content {
-        height: $heightContentWrapper;
-
-        .messages {
-            height: calc($heightContentWrapper - 3.6rem);
-            overflow: auto;
-
-            .message {
-                border-radius: 0.5rem;
-            }
-            .current-user {
-                .message {
-                    background-color: rgb(0, 132, 255);
-                    color: #ffffff;
-                }
-            }
-            .other-user {
-                .message {
-                    background-color: #E4E6EB;
-                }
-            }
-        }
-        form {
-            height: 3.6rem;
-            .form-action {
-                height: 100%;
-                svg {
-                    path {
-                        fill: #c1c4c9 !important;
-                    }
-                }
-
-                svg:hover {
-                    path {
-                        fill: rgb(0, 132, 255) !important;
-                    }
-                }
-            }
-        }
+    .btn-circle {
+      height: 30px;
+      width: 30px;
+      display: block;
+      border-radius: 50%;
+      background-color: #f1f1f1;
+      color: #333;
     }
+
+    .btn-circle:hover {
+      color: var(--bs-link-color);
+    }
+  }
+
+  .chat-content {
+    height: $heightContentWrapper;
+
+    .messages {
+      height: calc($heightContentWrapper - 3.6rem);
+      overflow: auto;
+
+      .message {
+        border-radius: 0.5rem;
+      }
+
+      .current-user {
+        .message {
+          background-color: rgb(0, 132, 255);
+          color: #ffffff;
+        }
+      }
+
+      .other-user {
+        .message {
+          background-color: #E4E6EB;
+        }
+      }
+    }
+
+    form {
+      height: 3.6rem;
+
+      .form-action {
+        height: 100%;
+
+        svg {
+          path {
+            fill: #c1c4c9 !important;
+          }
+        }
+
+        svg:hover {
+          path {
+            fill: rgb(0, 132, 255) !important;
+          }
+        }
+      }
+    }
+  }
 }
