--- a/src/assets/scss/_main-sidebar.scss
+++ b/src/assets/scss/_main-sidebar.scss
@@ -2,35 +2,42 @@
   height: 100vh;
   overflow-y: hidden;
   z-index: 1038;
-  transition: margin-left .3s ease-in-out,width .3s ease-in-out;
+  transition: margin-left .3s ease-in-out, width .3s ease-in-out;
   width: 250px;
+
   .brand-text {
-    transition: margin-left .3s linear,opacity .3s ease,visibility .3s ease;
+    transition: margin-left .3s linear, opacity .3s ease, visibility .3s ease;
   }
 }
+
 [class*=sidebar-dark-] {
   background-color: #343a40;
+
   .brand-link {
-    color: rgba(255,255,255,.8);
+    color: rgba(255, 255, 255, .8);
   }
+
   .sidebar {
     a {
       color: #c2c7d0;
     }
   }
+
   .nav-sidebar {
-    >.nav-item {
-      >.nav-treeview {
+    > .nav-item {
+      > .nav-treeview {
         background-color: transparent;
       }
     }
+
     .nav-item {
       .active {
         color: #fff;
         box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
       }
+
       .nav-link {
-        background-color: rgba(255,255,255,.1);
+        background-color: rgba(255, 255, 255, .1);
         color: #fff;
       }
     }
@@ -38,37 +45,42 @@
 
   .nav-treeview {
 
-    >.nav-item {
+    > .nav-item {
 
-      >.nav-link.active {
-        background-color: rgba(255,255,255,.9) !important;
+      > .nav-link.active {
+        background-color: rgba(255, 255, 255, .9) !important;
         color: #343a40 !important;
       }
 
-      >.nav-link {
+      > .nav-link {
         color: #c2c7d0 !important;
       }
     }
   }
 }
+
 [class*=sidebar-dark] {
   .brand-link {
-    color: rgba(255,255,255,.8);
+    color: rgba(255, 255, 255, .8);
     border-bottom: 1px solid #4b545c;
+
     .pushmenu {
-      color: rgba(255,255,255,.8);
+      color: rgba(255, 255, 255, .8);
     }
   }
+
   .user-panel {
     border-bottom: 1px solid #4f5962;
     overflow: hidden;
     white-space: nowrap;
+
     .info {
       overflow: hidden;
       white-space: nowrap;
     }
   }
 }
+
 .sidebar {
   height: calc(100% - (3.5rem + 1px));
   overflow-x: hidden;
@@ -79,31 +91,37 @@
   padding-top: 0;
   scrollbar-color: #a9a9a9 transparent;
   scrollbar-width: none;
+
   .user-panel {
     .info {
-      transition: margin-left .3s linear,opacity .3s ease,visibility .3s ease;
+      transition: margin-left .3s linear, opacity .3s ease, visibility .3s ease;
       display: inline-block;
       padding: 5px 5px 5px 10px;
     }
   }
 }
+
 .user-panel {
   position: relative;
+
   .image {
     display: inline-block;
     padding-left: 0.8rem;
   }
+
   img {
     height: auto;
     width: 2.1rem;
   }
+
   .info {
     overflow: hidden;
     white-space: nowrap;
   }
 }
+
 .nav-sidebar {
-  >.nav-item {
+  > .nav-item {
     .nav-icon {
       margin-left: 0.05rem;
       font-size: 1.2rem;
@@ -112,20 +130,24 @@
       width: 1.6rem;
     }
   }
+
   .nav-item {
     margin-bottom: 0;
-    >.nav-link {
+
+    > .nav-link {
       margin-bottom: 0.2rem;
     }
   }
+
   .nav-link {
     p {
       display: inline;
       margin: 0;
       white-space: normal;
     }
-    >p {
-      >.right {
+
+    > p {
+      > .right {
         position: absolute;
         right: 1rem;
         top: 0.7rem;
@@ -134,7 +156,7 @@
   }
 
   .menu-open {
-    >.nav-treeview {
+    > .nav-treeview {
       display: block;
       -webkit-animation-name: trans;
       -webkit-animation-duration: 0.75s;
@@ -149,11 +171,20 @@
   }
 }
 
-@-webkit-keyframes trans{
-  from{opacity: .0}
-  to{opacity: 1}
+@-webkit-keyframes trans {
+  from {
+    opacity: .0
+  }
+  to {
+    opacity: 1
+  }
 }
-@keyframes trans{
-  from{opacity: .0}
-  to{opacity: 1}
+
+@keyframes trans {
+  from {
+    opacity: .0
+  }
+  to {
+    opacity: 1
+  }
 }
