--- a/src/assets/scss/_small_box.scss
+++ b/src/assets/scss/_small_box.scss
@@ -1,5 +1,5 @@
 .small-box {
-  >.inner {
+  > .inner {
     padding: 10px;
   }
 
@@ -17,22 +17,23 @@
   }
 
   .icon {
-    color: rgba(0,0,0,.15);
+    color: rgba(0, 0, 0, .15);
     z-index: 0;
-    >svg {
+
+    > svg {
       font-size: 90px;
       position: absolute;
       right: 15px;
       top: 15px;
       transition: -webkit-transform .3s linear;
       transition: transform .3s linear;
-      transition: transform .3s linear,-webkit-transform .3s linear;
+      transition: transform .3s linear, -webkit-transform .3s linear;
     }
   }
 
-  >.small-box-footer {
-    background-color: rgba(0,0,0,.1);
-    color: rgba(255,255,255,.8);
+  > .small-box-footer {
+    background-color: rgba(0, 0, 0, .1);
+    color: rgba(255, 255, 255, .8);
     display: block;
     padding: 3px 0;
     position: relative;
