create logic socket event chat

--- a/src/assets/scss/_chat.scss
+++ b/src/assets/scss/_chat.scss
@@ -39,6 +39,10 @@
         }
       }
 
+      .list-chat-item.active {
+        background-color: $fdsBlue05;
+      }
+
       .list-chat-item:hover {
         background-color: #f1f1f1;
       }
