--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -1,2 +1,3 @@
 $heightContentWrapper: calc(100vh - calc(3.6rem) - calc(3.6rem));
-$borderCommon: rgb(219, 219, 219)
+$borderCommon: rgb(219, 219, 219);
+$fdsBlue05: #ECF3FF;
